# X-Plane

./: .gitignore  CMakeLists.txt  DataPlugin.cpp  DataProcessor.cpp  DataProcessor.h  LICENSE  README.md
BeigeBoxClient/: CMakeLists.txt
BeigeBoxClient/src/: XPlaneConnection.cpp  main.cpp
BeigeBoxClient/src/include/: XPlaneConnection.h
BeigeBoxPlugin/: CMakeLists.txt
BeigeBoxPlugin/src/: CMakeLists.txt  DataProcessor.cpp  DataUtil.cpp  Logger.cpp  Logger.h  MQClient.cpp  MQClientLin.cpp  Plugin.cpp  PluginMenu.cpp  Recorder.cpp  TaskWorker.cpp  UDPClient.cpp
BeigeBoxPlugin/src/include/: BBTypes.h  DataProcessor.h  DataUtil.h  Logger.h  MQClient.h  PluginMenu.h  Recorder.h  TaskWorker.h  UDPClient.h
BeigeBoxPlugin/src/res/: datarefs.json
BeigeBoxServer/: CMakeLists.txt
BeigeBoxServer/src/: CMakeLists.txt  XPlaneConnection.cpp  XPlaneListener.cpp  main.cpp
BeigeBoxServer/src/include/: XPlaneConnection.h  XPlaneListener.h
src/: CMakeLists.txt  DataPlugin.cpp  DataProcessor.cpp  DataProcessor.h  DataProcessor.hpp  DataUtil.cpp  DataUtil.h  Logger.cpp  Logger.h  Plugin.cpp  UDPClient.cpp  UDPClient.h  c_headers.h
